[package]
name = "gh"
authors = ["Tom Aarsen"]
version = "0.1.0"
description = "A simple CLI program to graph GitHub Contributions"
repository = "https://github.com/tomaarsen/GitHubContributionGrapher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
reqwest = { version ="0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
ansi_term = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
